k8s-templates/fabric-deployment-cli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: healthcare-hlf
  name: cli-peer%NUM%-%ORG%
spec:
  selector:
    matchLabels:
      name: cli-peer%NUM%-%ORG%
  template:
    metadata:
      labels:
        name: cli-peer%NUM%-%ORG%
    spec:
      volumes:
        - name: fabricfiles
          persistentVolumeClaim:
            claimName: hlf-pvc

      containers:
        - name: cli-peer%NUM%-%ORG%
          stdin: true
          tty: true
          resources:
            limits:
              memory: "300Mi"
              cpu: "200m"
            requests:
              memory: "200Mi"
              cpu: "90m"
          image: hyperledger/fabric-tools:2.3
          workingDir: /
          volumeMounts:
            - mountPath: /organizations
              name: fabricfiles
              subPath: organizations
            - mountPath: /configtx
              name: fabricfiles
              subPath: configtx
            - mountPath: /channel-artifacts
              name: fabricfiles
              subPath: channel-artifacts
            - mountPath: /scripts
              name: fabricfiles
              subPath: scripts
            - mountPath: /opt/gopath/src/github.com/chaincode
              name: fabricfiles
              subPath: chaincode
