k8s-templates/fabric-deployment-chaincode.yaml
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  namespace: healthcare-hlf
  name: chaincode-%ORG%
  labels:
    app: chaincode-%ORG%
spec:
  selector:
    matchLabels:
      app: chaincode-%ORG%
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chaincode-%ORG%
    spec:
      containers:
        - image: %USERNAME%/%IMAGE%
          imagePullPolicy: Always
          name: chaincode-%ORG%
          ports:
            - containerPort: 7052
---

apiVersion: v1
kind: Service
metadata:
  namespace: healthcare-hlf
  name: cc-%ORG%
  labels:
    app: cc-%ORG%
spec:
  ports:
    - name: grpc
      port: 7052
      targetPort: 7052
  selector:
    app: chaincode-%ORG%
