k8s-templates/fabric-deployment-explorerdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: healthcare-hlf
  name: explorer-db-%ORG%
spec:
  selector:
    matchLabels:
      app: explorer-db-%ORG%
  template:
    metadata:
      labels:
        app: explorer-db-%ORG%
    spec:
      containers:
      - name: explorer-db-%ORG%
        image: hyperledger/explorer-db:latest
        ports:
        - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  namespace: healthcare-hlf
  name: explorerdb-service-%ORG%
spec:
  selector:
    app: explorer-db-%ORG%
  ports:
  - port: 5432
    targetPort: 5432
