k8s-templates/fabric-deployment-ica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: healthcare-hlf
  name: ica-%ORG%
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
       app: hyperledger
       role: ca
       org: %ORG%
       name: ica-%ORG%
  template:
    metadata:
      labels:
       app: hyperledger
       role: ca
       org: %ORG%
       name: ica-%ORG%
    spec:
     containers:
       - name: ica-%ORG%
         image: hyperledger/fabric-ca:%FABRIC_TAG%
         ports:
          - containerPort: 7054
         command: ["sh"]
         args:  ["-c", "/scripts/start-intermediate-ca.sh %ORG% 2>&1"]
         volumeMounts:
          - mountPath: /etc/hyperledger/fabric-ca-server
            name: ica
          - mountPath: /scripts
            name: scripts
          - mountPath: /data
            name: data
     volumes:
       - name: ica
         persistentVolumeClaim:
             claimName: ica-%ORG%-pvc
       - name: scripts
         persistentVolumeClaim:
             claimName: scripts-%ORG%-pvc
       - name: data
         persistentVolumeClaim:
             claimName: data-%ORG%-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: healthcare-hlf
  name: ica-%ORG%
  
  labels:
    app: hyperledger
spec:
  type: ClusterIP
  selector:
   app: hyperledger
   role: ca
   org: %ORG%
   name: ica-%ORG%
  ports:
    - protocol: TCP
      targetPort: 7054
      port: 7054
