k8s-templates/fabric-deployment-orderer-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: healthcare-hlf
    name: orderer%NUM%-%ORG%
spec:
    selector:
        matchLabels:
            name: orderer%NUM%-%ORG%
    replicas: 1
    template:
        metadata:
            labels:
                name: orderer%NUM%-%ORG%
        spec:
           volumes:
             - name: fabricfiles
               persistentVolumeClaim:
                  claimName: hlf-pvc
           containers:
             - image: hyperledger/fabric-orderer:2.3
               name: orderer%NUM%-%ORG%
               imagePullPolicy: IfNotPresent
               volumeMounts:
                - name:  fabricfiles
                  mountPath:  /organizations
                  subPath: organizations
          
                - name: fabricfiles
                  mountPath: /system-genesis-block
                  subPath: system-genesis-block
---
kind: Service
apiVersion: v1
metadata:
    namespace: healthcare-hlf
    name: orderer%NUM%-%ORG%
    labels:
        run: orderer%NUM%-%ORG%
spec:
    selector:
        name: orderer%NUM%-%ORG%
    type: NodePort
    ports:
        - protocol: TCP
          port: 7050
          targetPort: 7050
          nodePort: %NODEPORT%
          name: grpc
        - protocol: TCP
          port: 9443
          targetPort: 9443
          nodePort: %NODEPORTMETRICS%
          name: metrics
