k8s-templates/fabric-deployment-peer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: healthcare-hlf
  name: peer%NUM%-%ORG%
spec:
  selector:
    matchLabels:
      name: peer%NUM%-%ORG%
  replicas: 1
  template:
    metadata:
      labels:
        name: peer%NUM%-%ORG%
    spec:
      volumes:
        - name: fabricfiles
          persistentVolumeClaim:
            claimName: hlf-pvc
        - name: builders-config
          configMap:
            name: builders-config
            items:
              - key: core.yaml
                path: core.yaml
        - name: external-builder-detect
          configMap:
            name: builders-config
            items:
              - key: detect
                path: detect
                mode: 0544
        - name: external-builder-build
          configMap:
            name: builders-config
            items:
              - key: build
                path: build
                mode: 0544
        - name: external-builder-release
          configMap:
            name: builders-config
            items:
              - key: release
                path: release
                mode: 0544
      containers:
        - name: peer%NUM%-%ORG%
          image: hyperledger/fabric-peer:2.3
          command: ["sh", "-c", "peer node start"]
          #args: ['chown -R 1003:1003 /opt/couchdb/data']
          ports:    
            - containerPort: 7051
            - containerPort: 7052
            - containerPort: 7053
            - containerPort: 9443
          # resources:
          #   limits:
          #     memory: "300Mi"
          #     cpu: "300m"
          #   requests:
          #     memory: "200Mi"
          #     cpu: "200m"
          volumeMounts:
            - mountPath: /opt/gopath/src/github.com/chaincode/
              name: fabricfiles
              subPath: chaincode/
            - mountPath: /organizations
              name: fabricfiles
              subPath: organizations
            - mountPath: /var/hyperledger/production
              name: fabricfiles
              subPath: state/%ORG%/peer%NUM%
            - mountPath: /etc/hyperledger/fabric/core.yaml
              name: builders-config
              subPath: core.yaml
            - mountPath: /builders/external/bin/detect
              name: external-builder-detect
              subPath: detect
            - mountPath: /builders/external/bin/build
              name: external-builder-build
              subPath: build
            - mountPath: /builders/external/bin/release
              name: external-builder-release
              subPath: release


        - name: couchdb
          image: hyperledger/fabric-couchdb:0.4.15
          #command:
            #- /bin/sh
            #- -c
            #- |
              #cp -R /opt/couchdb/data /var/lib/couchdb
          #command: ["sh", "-c"] 
          #args: ["cp -R /opt/couchdb/data /var/lib/couchdb"]
          
          # resources:
          #   limits:
          #     memory: "150Mi"
          #     cpu: "150m"
          #   requests:
          #     memory: "100Mi"
          #     cpu: "100m"
          volumeMounts:
            - mountPath: /opt/couchdb/data # /var/lib/couchdb  #
              name: fabricfiles
              subPath: state/%ORG%/peer%NUM%-couchdb
            
          
---
kind: Service
apiVersion: v1
metadata:
  namespace: healthcare-hlf
  name: peer%NUM%-%ORG%
  labels:
    app: peer%NUM%-%ORG%
spec:
  selector:
    name: peer%NUM%-%ORG%
  type: NodePort
  ports:
    - name: grpc
      port: 7051
      targetPort: 7051
      nodePort: %NODEPORT%
      protocol: TCP
    - name: event
      port: 7061
      targetPort: 7061
      nodePort: %NODEPORTEVENT%
      protocol: TCP
    - name: couchdb
      port: 5984
      targetPort: 5984
      nodePort: %NODEPORTCOUCH%
      protocol: TCP

---
#---------------- peer%NUM%-%ORG% Metrics Service ---------------
apiVersion: v1
kind: Service
metadata:
  namespace: healthcare-hlf
  labels:
    app: peer%NUM%-%ORG%
    metrics-service: "true"
  name: peer%NUM%-%ORG%-metrics
spec:
  type: NodePort
  ports:
  - name: "peer-metrics"
    port: 9443
    targetPort: 9443
    nodePort: %NODEPORTMETRICS%
  selector:
    name: peer%NUM%-%ORG%
