k8s-templates/fabric-deployment-rca.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: healthcare-hlf
  name: rca-%ORG%
spec:
  selector:
    matchLabels:
      app: rca-%ORG%
  replicas: 1
  template:
    metadata:
      labels:
        app: rca-%ORG%
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hlf-pvc
      containers:

        - name: rca-%ORG%
          image: hyperledger/fabric-ca:latest
          imagePullPolicy: "IfNotPresent"
          command:
            [
              "fabric-ca-server" ,
              "start", "-b" ,"%CA_ADMIN_USER_PASS%","--port","%PORT%", "-d"
            ] 
          resources:
            requests:
              memory: "300Mi"
              cpu: "50m"
            limits:
              memory: "500Mi"
              cpu: "50m"
          volumeMounts:
            - name: data
              mountPath: /etc/hyperledger/fabric-ca-server
              subPath: organizations/fabric-ca/%RCA%RCA
---

apiVersion: v1
kind: Service
metadata:
  namespace: healthcare-hlf
  name: rca-%ORG%
  
  labels:
    app: rca-%ORG%
spec:
  type: NodePort
  selector:
    app: rca-%ORG%
  ports:
    - protocol: TCP
      targetPort: %PORT%
      port: %PORT%
      nodePort: %NODEPORT%
